test/invalid/utf8.anf
mod utf8 {
    def _0x80 = "€"
    def _0xbf = "¿"
    def _2cont = "€¿"
    def _3cont = "€¿€"
    def _4cont = "€¿€¿"
    def _5cont = "€¿€¿€"
    def _6cont = "€¿€¿€¿"
    def _7cont = "€¿€¿€¿€"
    def _64cont = "€‚ƒ„…†‡ˆ‰Š‹Œ‘’“”•–—˜™š›œŸ¡¢£¤¥¦§¨©ª«¬­®¯°±²³´µ¶·¸¹º»¼½¾¿"
}
